# utoronto-fms-workshop-pytorch

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  configure  entrypoint.sh  jupyter_server_config.py  models.md  pyproject.toml
.github/workflows/: build-and-push.yml
