[project]
name = "utoronto-fms-workshop-pytorch"
version = "0.1.0"
description = "Docker image dependencies for the University of Toronto Foundation Models for Science workshop."
requires-python = ">=3.10"
dependencies = [
    "datasets==3.0.1",
    "jupyterlab==4.2.5",
    "jupyterlab_code_formatter==2.2.1",
    "matplotlib==3.9.2",
    "numpy==2.1.2",
    "ipykernel==6.29.5",
    "jupytext==1.16.4",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "pyarrow==17.0.0",
    "requests==2.32.3",
    "tensorboard==2.17.1",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
    "scipy==1.14.1",
    "notebook==7.2.2",
    "torch==2.5.1",
    "tqdm==4.66.5",
    "transformers==4.45.2",
    "accelerate==0.34.2",
    "peft==0.13.2",
    "umap-learn==0.5.6",
    "optuna==4.0.0",
]

[tool.uv.pip]
index-url = "https://download.pytorch.org/whl/cu124"
extra-index-url = ["https://pypi.org/simple"]
